[gd_scene load_steps=3 format=3 uid="uid://co8yjdq0dl1d8"]

[ext_resource type="Script" path="res://scenes/NamingUI/naming_ui.gd" id="1_prwsu"]
[ext_resource type="PackedScene" uid="uid://ca1hegvbpcuqc" path="res://scenes/APIClient/ClientWrappers/set_folklore_user_name.tscn" id="2_3u2ha"]

[node name="NamingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_prwsu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.0
offset_top = -143.0
offset_right = 357.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "What is your name?"
horizontal_alignment = 1

[node name="UserNameEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Prince Cats'A'Lot"
alignment = 1

[node name="Instructions" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Please choose a name that is:
* Readable and pronounceable.
* Family-friendly, no profanity.
* Between 4 and 25 characters long."
horizontal_alignment = 1

[node name="CatsMessage" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(682, 117)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats  Cats Cats Cats Cats Cats  Cats Cats Cats"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ErrorMessage" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Something wen't wrong. Please check your internet connection and try again...

If the issue persists, please report it to the developer."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Confirm"

[node name="SetFolkloreUserName" parent="." instance=ExtResource("2_3u2ha")]

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/UserNameEdit" to="." method="_on_user_name_edit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="name_updated" from="SetFolkloreUserName" to="." method="_on_set_folklore_user_name_name_updated"]
[connection signal="request_failed" from="SetFolkloreUserName" to="." method="_on_set_folklore_user_name_request_failed"]
